Enhance to allow score pass in CQL